# Version 0.5.0
- Improved exporting to dxf. QPainterPath export as Polyline.
- Show additional message dialog if measurements was changed. Related to issue [#440].
- [#132] Intersect Curves.
- Added language Chinese (China).
- New icon for VAL file. Updated Tape logo. Updated ico for standard measurements.
- [#325] Check pattern for inverse compatibility.

# Version 0.4.2
- Fixed triggering validation a detail. Two new cases: has been changed Reverse option and the list has been scrolled.
- Fixed broken path to measurements after using Save As option.
- Tool line. Block selecting the same point twice.
- [#443] Not valid dxf file. libdxf updated to version 3.12.2.0. Fixed drawing subpaths.
- Fixed combobox width in Dialog "Tool True Dart point".
- [#441] Broken reference incrementation for tool "True Dart point".
- [#439] Widen Formula Dialog.
- Fixed broken tool dialogs "Intersection arcs" and "Point from arc and tangent".
- [#442] 'Broken Formula' error when using Intersect Circles tool.

# Version 0.4.1 January 29, 2016
- [#438] Broken switching pattern pieces.
- Fixed wrong title for dialog "New pattern".

# Version 0.4.0 January 27, 2016
- [#209] New tool for Point from arc and tangent (Draw)
- [#232] Intersection of Arcs (Draw)
- [#246] Arc with Given Length (Draw)
- [#259] Draw free curve path point at distance (Draw)
- [#301] True darts (Draw)
- [#73] Seam Allowance - Width
- [#329] Add ScrollUp/ScrollDown Button in Detail view
- [#179] Export to DXF
- [#202] Posterazor feature
- [#277] Add 'Letter' and 'Legal' to paper size selection
- [#334] Command Line Support
- [#290] Add paper type 'Roll - 36" & 'Roll - 44" to 'Create Layout' paper size
- [#172] Search field for dialog measurements
- [#181] Better measurements standard
- [#314] New measurement structure
- [#275] Add 'Show Curve Details' icon on top menu bar to show/hide control points and curve direction
- [#282] Add dialog for File/New, update Create Pattern Piece dialog